--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,10 @@
 .header img {
     width: 40px;
-    margin: 10px 0 0 20px;
+    margin: 10px 0 0 15px;
 }
 .header {
     grid-area: h;
-    background-color: green;
+    background-color: #FF0000;
+    border: 2px solid #000000;
+    border-radius: 3px;
 }
