--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,10 @@
 .nav {
+    font-size: x-large;
     grid-area: n;
-    background-color: burlywood;
-    padding: 35px;
+    background-color: #00FF7F;
+    padding: 25px 55px 0 15px;
+    border: 2px solid #00FFFF;
+    border-radius: 3px;
 
 }
 
