--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,9 +1,20 @@
+.wrapper {
+    width: 900px;
+    border-radius: 3px;
+}
+
 
 .descriptionBlock {
     padding: 10px;
 }
 
 .img {
-    height: 300px;
-    weight: 600px;
+    height: 500px;
+    width: 1050px;
 }
+
+
+
+
+
+
